--- a/logstash-role/meta/main.yml
+++ b/logstash-role/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
-  author: Jevgeni Zabelin
-  description: Install Logstash role
+  author: jevgeni_zabelin
+  description: install_logstash_role
   company: netology
   role_name: logstash_role
   # If the issue tracker for your role is not on github, uncomment the
