--- a/logstash-role/tasks/main.yml
+++ b/logstash-role/tasks/main.yml
@@ -2,5 +2,5 @@
 - import_tasks: precheck.yml
 - include_tasks: "download_{{ ansible_facts.pkg_mgr }}.yml"
 - include_tasks: "install_{{ ansible_facts.pkg_mgr }}.yml"
-- include_tasks: "copy_{{ ansible_facts.pkg_mgr }}.yml"
+- include_tasks: "copy_yum.yml"
 - import_tasks: configure.yml
